<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Myname">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="MemeGramLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/c0295d051affb5cd1c8a425b8a402e46" />

    <FrameLayout
        android:layout_width="335dp"
        android:layout_height="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="55dp"
            android:layout_height="44dp"
            android:text="By:-"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/name1"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/name1" />

        <TextView
            android:id="@+id/Reg1"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="50sp"
            android:text="@string/reg1" />


        <TextView
            android:id="@+id/name2"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70sp"
            android:text="@string/name2" />

        <TextView
            android:id="@+id/Reg2"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="70sp"
            android:text="@string/reg2" />


        <TextView
            android:id="@+id/name3"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90sp"
            android:text="@string/name3" />

        <TextView
            android:id="@+id/Reg3"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="90sp"
            android:text="@string/reg3" />


        <TextView
            android:id="@+id/name4"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="110sp"
            android:text="@string/name4" />

        <TextView
            android:id="@+id/Reg4"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="110sp"
            android:text="@string/reg4" />


        <TextView
            android:id="@+id/name5"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="130sp"
            android:text="@string/name5" />

        <TextView
            android:id="@+id/Reg5"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="130sp"
            android:text="@string/reg5" />


        <TextView
            android:id="@+id/name6"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:text="@string/name6" />

        <TextView
            android:id="@+id/Reg6"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="150sp"
            android:text="@string/reg6" />


        <TextView
            android:id="@+id/name7"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="170sp"
            android:text="@string/name7" />

        <TextView
            android:id="@+id/Reg7"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="170sp"
            android:text="@string/reg7" />


        <TextView
            android:id="@+id/name8"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="190sp"
            android:text="@string/name8" />

        <TextView
            android:id="@+id/Reg8"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="190sp"
            android:text="@string/reg8" />


        <TextView
            android:id="@+id/name9"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="210sp"
            android:text="@string/name9" />

        <TextView
            android:id="@+id/Reg9"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="210sp"
            android:text="@string/reg9" />


        <TextView
            android:id="@+id/name10"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230sp"
            android:text="@string/name10" />

        <TextView
            android:id="@+id/Reg10"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="230sp"
            android:text="@string/reg10" />


        <TextView
            android:id="@+id/name11"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250sp"
            android:text="@string/name11" />

        <TextView
            android:id="@+id/Reg11"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="250sp"
            android:text="@string/reg11" />


        <TextView
            android:id="@+id/name12"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="270sp"
            android:text="@string/name12" />

        <TextView
            android:id="@+id/Reg12"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="270sp"
            android:text="@string/reg12" />


        <TextView
            android:id="@+id/name13"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="290sp"
            android:text="@string/name13" />

        <TextView
            android:id="@+id/Reg13"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="290sp"
            android:text="@string/reg13" />


        <TextView
            android:id="@+id/name14"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="310sp"
            android:text="@string/name14" />

        <TextView
            android:id="@+id/Reg14"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="310sp"
            android:text="@string/reg14" />

        <TextView
            android:id="@+id/name15"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="330sp"
            android:text="@string/name15" />

        <TextView
            android:id="@+id/Reg15"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="330sp"
            android:text="@string/reg15" />

        <TextView
            android:id="@+id/name16"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="350sp"
            android:text="@string/name16" />

        <TextView
            android:id="@+id/Reg16"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="350sp"
            android:text="@string/reg16" />

        <TextView
            android:id="@+id/name17"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="370sp"
            android:text="@string/name17" />

        <TextView
            android:id="@+id/Reg17"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="370sp"
            android:text="@string/reg17" />
        
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>